--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ header h2{
 	background-image: url("b.jpg");
 	min-height: 100vh;
     background-size: cover;
-	opacity: 0.75;
 	background-position: center;
 	background-attachment: fixed;
 }
@@ -107,7 +106,7 @@ meter{
     width: 400px;
     height: 22px;
 }
-.skills-chart button{
+button{
     height: 40px;
     width: 120px;
     border-radius: 4px;
@@ -138,7 +137,6 @@ meter{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
-    margin-bottom: 100px;
     padding-bottom: 100px;
 }
 .card{
@@ -161,4 +159,102 @@ meter{
 }
 .card-content .fa{
     font-size: 4rem;
+}
+
+.container-3{
+    padding: 5%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
+}
+.left{
+    width: 65%;
+    margin-left: 40%;
+}
+.left p{
+    color: gray;
+    margin-top: 15px;
+    letter-spacing: 2px;
+}
+input, .form button{
+    margin-top: 25px;
+    width: 50vh;
+    padding: 10px;
+}
+.right{
+    padding: 40px;
+    margin-left: 20%;
+    margin-right: -20%;
+    background-color: rgb(44, 44, 44);
+    color: white;
+}
+.right .icon-and-text{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+}
+.icon-and-text .social-icons{
+    font-size: 25px;
+    display: grid;
+    grid-template-rows: auto;
+    
+}
+.icon-and-text .social-icons a{
+    text-decoration: none;
+    color: white;
+}
+.icon-and-text .text-container p{
+    padding-top: 7px;
+    margin-left: -250px;
+}
+
+
+
+
+
+footer{
+    height: 40vh;
+    background-color: #1b52e9cc;
+}
+footer .footer-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top: 50px;
+}
+.footer-head, .follow-text{
+    margin: 10px;
+    font-size: 20px;
+    color: white;
+}
+.footer-content a{
+    text-decoration: none;
+    margin: 10px;
+    font-size: 15px;
+    color: black;
+}
+.footer-content a:hover{
+    color: whitesmoke;
+}
+.first-col{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    max-width: 30%;
+}
+.first-col p{
+    margin-top: 10px;
+}
+.Social-icons a .fa{
+    font-size: 20px;
+    color: black;
+    margin-left: -15px;
+    padding-top: 13px;
+    transition: 1s;
+    color: white;
+}
+.second-col, .third-col, .fourth-col{
+    display: flex;
+    flex-direction: column;
 }
